--- a/Bio.html
+++ b/Bio.html
@@ -17,8 +17,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   <div class="menu">
   <h1><a href="">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="">Contatti</a></h1>
   </div>
-<div>
- nostra storia
+<div class="boxstoria">
+ La nostra storia
 </div>
 
 </body>
