--- a/Bio.html
+++ b/Bio.html
@@ -13,18 +13,23 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 </head>
 <body>
 
+  <div class="subbody">
+    <div class="menu">
+    <h1><a href="homepage.html">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="Contatti.html">Contatti</a></h1>
+    </div>
+    <div class="boxstoria">
+      <h1>La nostra storia</h1>
+      <p> Latina fiori è nata nel 1999 quando due persone Gianmatteo Mattioni e Tristiano Grandiani si conobbero e colti dalla
+       loro passione in comune per le piante volettero darsi prova e crearono una composizione floreale che appena vista da
+       un completo estraneo fu subito acquistata.<br>
+       decisero quindi di aprire un piccolo negozio quello che poi sara quello che dara i natali alla piu grande azienda floreale
+       della città di latina.</p>
 
-  <div class="menu">
-  <h1><a href="homepage.html">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="Contatti.html">Contatti</a></h1>
+
   </div>
-<div class="boxstoria">
- <h1>La nostra storia</h1> 
- Latina fiori è nata nel 1999 quando due persone Gianmatteo Mattioni e Tristiano Grandiani si conobbero e colti dalla 
- loro passione in comune per le piante volettero darsi prova e crearono una composizione floreale che appena vista da
- un completo estraneo fu subito acquistata.<br>
- decisero quindi di aprire un piccolo negozio quello che poi sara quello che dara i natali alla piu grande azienda floreale 
- della città di latina.
- 
-</div>
+  </div>
+
+
+
 
 </body>
