--- a/Bio.html
+++ b/Bio.html
@@ -15,7 +15,13 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 
   <div class="subbody">
     <div class="menu">
-    <h1><a href="homepage.html">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="Contatti.html">Contatti</a></h1>
+      <ul>
+        <li><a href="homepage.html">Home</a></li>
+        <li><a href="Bio.html">Bio</a></li>
+        <li><a href="">Fiori</a></li>
+        <li><a href="">Partner </a></li>
+        <li><a href="Contatti.html">Contatti</a></li>
+      </ul>
     </div>
     <div class="boxstoria">
       <h1>La nostra storia</h1>
