--- a/Bio.html
+++ b/Bio.html
@@ -18,8 +18,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
       <ul>
         <li><a href="homepage.html">Home</a></li>
         <li><a href="Bio.html">Bio</a></li>
-        <li><a href="">Fiori</a></li>
-        <li><a href="">Partner </a></li>
+        <li><a href="Fiori.html">Fiori</a></li>
+        <li><a href="Partner.html">Partner</a></li>
         <li><a href="Contatti.html">Contatti</a></li>
       </ul>
     </div>
